SUBDIRS = \
	BackpackModule \
	BoxDotNetModule \
	FileModule \
	FeedModule \
	FlickrModule \
	FspotModule \
	GmailModule \
	PicasaModule \
	SettingsModule \
	SmugMugModule \
	EvolutionModule

conduit_handlersdir = $(libdir)/conduit/dataproviders
conduit_handlers_PYTHON = \
	__init__.py \
	iPodModule.py \
	TomboyModule.py \
	ConverterModule.py

clean-local:
	rm -rf *.pyc *.pyo
