SUBDIRS = \
	BackpackModule \
	BoxDotNetModule \
	FacebookModule \
	FileModule \
	FeedModule \
	FlickrModule \
	FspotModule \
	GmailModule \
	PicasaModule \
	SettingsModule \
	SmugMugModule \
	EvolutionModule \
	YouTubeModule \
	GoogleModule

conduit_handlersdir = $(libdir)/conduit/dataproviders
conduit_handlers_PYTHON = \
	__init__.py \
	iPodModule.py \
	TomboyModule.py \
	ConverterModule.py

clean-local:
	rm -rf *.pyc *.pyo
