SUBDIRS = \
	BackpackModule \
	BansheeModule \
	BoxDotNetModule \
	FacebookModule \
	FileModule \
	FeedModule \
	FlickrModule \
	FspotModule \
	iPodModule \
	SmugMugModule \
	EvolutionModule \
	GoogleModule \
	ShutterflyModule \
	RhythmboxModule \
	N800Module \
	NetworkModule \
	GConfModule \
	ZotoModule

conduit_handlersdir = $(libdir)/conduit/modules
conduit_handlers_PYTHON = \
	__init__.py \
	TomboyModule.py \
	ConverterModule.py \
	PhotoConverterModule.py \
	AudioVideoConverterModule.py

clean-local:
	rm -rf *.pyc *.pyo
