themedir = $(datadir)/icons/hicolor
size = 16x16
context = actions

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA = \
	conduit-conflict-delete.png \
	conduit-conflict-right.png \
	conduit-conflict-left.png \
	conduit-conflict-skip.png \
	conduit-conflict-ask.png

noinst_DATA = 

EXTRA_DIST = \
	$(icons_DATA)	\
	$(noinst_DATA)
