themedir = $(datadir)/icons/hicolor
size = 16x16
context = status

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA = \
	conduit-progress-1.png \
	conduit-progress-2.png \
	conduit-progress-3.png \
	conduit-progress-4.png \
	conduit-progress-5.png \
	conduit-progress-6.png \
	conduit-progress-7.png \
	conduit-progress-8.png \
	conduit-sink.png \
	conduit-source.png \
	conduit-twoway.png

noinst_DATA = 

EXTRA_DIST = \
	$(icons_DATA)	\
	$(noinst_DATA)
